# hyperclaude

./: .env.example  .gitignore  ENHANCEMENTS.md  PHASE2_ENHANCEMENTS.md  QUICKSTART.md  mcp_config.json
.claude/: settings.json
.claude/hooks/: agent-start-tracker.sh
.claude/hooks/src/: agent-start-tracker.ts  agent-tracker.ts  auto-orchestration.ts  auto-resume.ts  learning-engine.ts  notifications.ts  session-start-continuity.ts  skill-activation-prompt.ts  smart-compression.ts  smart-suggestions.ts  subagent-stop-continuity.ts
.claude/scripts/: dashboard-server.py  status.sh
.claude/skills/: dashboard.md  smart_compress.md
.claude/skills/glm-delegate/: SKILL.md
.claude/skills/glm-orchestrator/: SKILL.md
.claude/skills/rp-explorer/: SKILL.md
rust/glm-orchestrator/: Cargo.toml
rust/glm-orchestrator/src/: main.rs  mcp.rs
scripts/: glm_delegate.py  glm_generate.py
