[package]
name = "glm-orchestrator"
version = "0.1.0"
edition = "2024"
description = "MCP server that delegates code generation to GLM-4.7 via zai (cc-mirror)"
authors = ["eybo"]

[dependencies]
# MCP protocol
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Path expansion
shellexpand = "3"

[profile.release]
lto = true
strip = true
